# scara_cpe_4students

./: LICENSE  PART1.md  README.md
scara_cpe/: CMakeLists.txt  package.xml
scara_cpe/config/: scara.yaml  scara_cpe.rviz
scara_cpe/launch/: controller_manager.launch  scara_cpe_gui.launch  scara_meta_controller.launch
scara_cpe/script/: state_publisher_student.py
scara_cpe/src/: emagnet_student.cpp  move_student.cpp
scara_cpe/urdf/: scara_cpe-base_link.dae  scara_cpe.urdf
scara_cpe_description/: CMakeLists.txt  package.xml
scara_cpe_description/config/: coins.world  scara.yaml~  scara_controller.yaml  scara_cpe.rviz  scara_trajectory_controller.yaml~
scara_cpe_description/launch/: scara_cpe_gui.launch  scara_cpe_gui.launch~  scara_sim.launch.py
scara_cpe_description/urdf/: scara_cpe-link_1.dae  scara_cpe-link_2.dae  scara_cpe.gazebo  scara_cpe.gazebo~  scara_cpe.ros2_control.gazebo.xacro  scara_cpe.ros2_control.xacro  scara_cpe.urdf  scara_cpe.urdf.gazebo.xacro  scara_cpe.urdf.xacro  scara_cpe.xacro  scara_cpe.xacro~
scara_cpe_gazebo/: CMakeLists.txt  package.xml
scara_cpe_gazebo/config/: gazebo_motor_controller.yaml
scara_cpe_gazebo/launch/: gazebo_motor_controller.launch~  gazebo_scara_playground.launch
scara_cpe_gazebo/models/kinect_ros/: model-1_4.sdf  model.sdf  model.sdf~
scara_cpe_gazebo/worlds/: cyc  dipole_magnet.world  scara_cpe.world
scara_cpe_ik_moveit_plugin/: CMakeLists.txt  ikfastXY2D_scara_cpe_group.cpp  package.xml  package.xml~  scara_cpe_scara_cpe_group_moveit_ikfast_plugin_description.xml  update_ikfast_plugin.sh
scara_cpe_ik_moveit_plugin/src/: scara_cpe_scara_cpe_group_ikfast_moveit_plugin.cpp  scara_cpe_scara_cpe_group_ikfast_moveit_plugin.cpp~  scara_cpe_scara_cpe_group_ikfast_solver.cpp
scara_cpe_moveit2/: .setup_assistant  CMakeLists.txt  package.xml
scara_cpe_moveit2/config/: initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  ros2_controllers.yaml  scara_cpe.ros2_control.xacro  scara_cpe.srdf  scara_cpe.urdf.xacro
scara_cpe_moveit2/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
scara_cpe_robot/: CMakeLists.txt  package.xml
scara_cpe_robot/config/: dynamixel_trajectory_controller.yaml
scara_cpe_robot/launch/: controller_manager.launch  scara_meta_controller.launch
scara_cpe_robot/src/: emagnet_student.cpp
